修复CMakeLists.txt中没有链接nccl导致的编译错误

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 include_directories(/usr/lib/x86_64-linux-gnu/openmpi/include)
-set(CMAKE_CUDA_ARCHITECTURES 70)
+set(CMAKE_CUDA_ARCHITECTURES 70)    # for V100
 set(CMAKE_BUILD_TYPE Release)
 
 project(QCU LANGUAGES C CXX CUDA) # project name = ${PROJECT_NAME}
@@ -20,14 +20,18 @@ add_library(qcu
     src/qcd/qcu_wilson_dslash.cu
     src/qcu_storage/qcu_storage.cu
     src/qcu.cu
+    src/algebra/qcu_algebra.cu
 )
 target_include_directories(qcu 
     PUBLIC
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_SOURCE_DIR}/interface
 )
-
+add_executable(test_linear_algebra 
+    ${PROJECT_SOURCE_DIR}/src/tests/linear_algebra/test_kernels.cu)
+target_link_libraries(test_linear_algebra qcu)
 
 find_package(MPI REQUIRED)
 target_link_libraries(qcu ${MPI_LIBRARIES})
+target_link_libraries(qcu nccl)
 target_compile_definitions(qcu PRIVATE MPI_ENABLED)
